smm-1.8.0/multiCloudDeployments/control/BoutiqueApp/istio-manifests/routing/0-v1-v2-destinationRule.yaml
# Copyright (c) 2021, Cisco Systems, Inc. and/or its affiliates. All rights reserved. 
# Licensed under the Apache 2.0 license, see LICENSE file.

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-versions-destinationrule
spec:
  host: frontend
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
