smm-1.8.0/multiCloudDeployments/control/BoutiqueApp/istio-manifests/routing/1-frontend-all-v1.yaml
# Copyright (c) 2021, Cisco Systems, Inc. and/or its affiliates. All rights reserved. 
# Licensed under the Apache 2.0 license, see LICENSE file.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress-all-v1
spec:
  hosts:
  - "*"
  gateways:
  - boutique-frontEnd-ingressgateway
  http:
  - route:
    - destination:
        host: frontend
        subset: v1
        port:
          number: 80
