smm-1.8.0/multiCloudDeployments/control/BoutiqueApp/istio-manifests/routing/3-frontend-weighted-v1-v2.yaml
# Copyright (c) 2021, Cisco Systems, Inc. and/or its affiliates. All rights reserved. 
# Licensed under the Apache 2.0 license, see LICENSE file.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-weighted-v1-v2
spec:
  hosts:
  - "*"
  gateways:
  - boutique-frontEnd-ingressgateway
  http:
  - route:
    - destination:
        host: frontend
        subset: v1
        port:
          number: 80
      weight: 20
    - destination:
        host: frontend
        subset: v2
        port:
          number: 80
      weight: 80
