smm-1.8.0/multiCloudDeployments/control/BoutiqueApp/istio-manifests/routing/4-http-abort-injection-fe-v1.yaml
# Copyright (c) 2021, Cisco Systems, Inc. and/or its affiliates. All rights reserved. 
# Licensed under the Apache 2.0 license, see LICENSE file.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-abort-injection-frontendv2
spec:
  hosts:
  - "*"
  gateways:
  - boutique-frontEnd-ingressgateway
  http:
  - fault:
      abort:
        percentage: 
          value: 100
        httpStatus: 500
    route:
    - destination:
        host: frontend
        subset: v1
        port:
          number: 80
